k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: do-prototype
  labels:
    run: do-prototype
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: do-prototype
