k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: do-prototype-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: do-staff-access
spec:
  tls:
  - hosts:
    - gerwggwerhgreherhre.jakegealer.me
    secretName: do-prototype-prod-letsencrypt
  rules:
  - host: gerwggwerhgreherhre.jakegealer.me
    http:
      paths:
      - path: /
        backend:
          serviceName: do-prototype
          servicePort: 80
